# mpi_matrix_test

./: .gitignore  CMakeLists.txt  CMakeLists_Intel.txt  README.md  backup.sh  build.sh  constants.hpp  container_print.hpp  debug.cpp  debug.hpp  helpers.cpp  helpers.hpp  jclean.sh  lies_mich.txt  load_modules.sh  main.cpp  matrix_loader.cpp  matrix_loader.hpp  move_jobs.sh  mpi_matrix_test.pro  parallel_matrix.cpold  parallel_matrix.cpp  parallel_matrix.hpp  program_options.cpp  program_options.hpp  remote_build.sh  remote_build_job.sh  remote_run.sh  remote_run_job.sh  run.sh  stream_helpers.hpp  x_remote_run_job.sh
bench/: benchhelp.cpp  benchhelp.hpp
exercises/: 3_4.cpp  3_4.hpp  3_5.cpp  3_5.hpp  4_2.cpp  4_2.hpp  4_3.cpp  4_3.hpp  4_4.cpp  4_4.hpp  traffic_bench.cpp
matrix/: block_descriptor.cpp  block_descriptor.hpp  block_list.cpp  block_list.hpp  file_block_map.hpp  forward.hpp  matrix.cpp  matrix.hpp  matrix_block.cpp  matrix_block.hpp  matrix_loader.cpp  matrix_loader.hpp  matrix_partition.cpp  matrix_partition.hpp  matrix_value_type.hpp  matrix_vector.cpp  matrix_vector.hpp  matrix_vector_view.cpp  matrix_vector_view.hpp  matrix_view.hpp  permut_optimizer.cpp  permut_optimizer.hpp
mpi/: communicator.cpp  communicator.hpp  error.cpp  error.hpp  group.hpp  mpi_core.cpp  mpi_core.hpp  shared_file.cpp  shared_file.hpp  types.hpp
